# 5GSimulator

./: .gitignore  CMakeLists.txt  README.md
libs/googletest/googlemock/test/: gmock-spec-builders_test.cc:Zone.Identifier
src/: main.cpp  nr_encoder.cpp  nr_encoder.hpp
tests/: nr_encoder_test.cpp
